<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anisimov.vlad.task1.MainActivity"
    tools:showIn="@layout/activity_main"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/local_bottom_margin"
            android:paddingTop="@dimen/local_top_margin"
            android:text="@string/title"
            android:onClick="pushToast"
            android:clickable="true"/>

        <TextView
            android:id="@+id/status"
            style="@style/Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_status"
            android:text="@string/status"
            android:onClick="pushToast"
            android:clickable="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginBottom="@dimen/local_bottom_margin"
            android:layout_marginTop="@dimen/local_top_margin"
            android:background="@drawable/shape_separator"
            android:onClick="pushToast"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/created"
                android:onClick="pushToast"
                android:clickable="true"/>

            <TextView
                style="@style/BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/created_date"
                android:onClick="pushToast"
                android:clickable="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginBottom="@dimen/local_bottom_margin"
            android:layout_marginTop="@dimen/local_top_margin"
            android:background="@drawable/shape_separator"
            android:onClick="pushToast"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registered"
                android:onClick="pushToast"
                android:clickable="true"/>

            <TextView
                style="@style/BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/registered_date"
                android:onClick="pushToast"
                android:clickable="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginBottom="@dimen/local_bottom_margin"
            android:layout_marginTop="@dimen/local_top_margin"
            android:background="@drawable/shape_separator"
            android:onClick="pushToast"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resolve_before"
                android:onClick="pushToast"
                android:clickable="true"/>

            <TextView
                style="@style/BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/resolve_before_date"
                android:onClick="pushToast"
                android:clickable="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginBottom="@dimen/local_bottom_margin"
            android:layout_marginTop="@dimen/local_top_margin"
            android:background="@drawable/shape_separator"
            android:onClick="pushToast"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/directed_by"
                android:onClick="pushToast"
                android:clickable="true"/>

            <TextView
                style="@style/BlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/director_name"
                android:onClick="pushToast"
                android:clickable="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginBottom="@dimen/local_bottom_margin"
            android:layout_marginTop="@dimen/local_top_margin"
            android:background="@drawable/shape_separator"
            android:onClick="pushToast"
            android:clickable="true"/>

        <TextView
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/desc"
            android:onClick="pushToast"
            android:clickable="true"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rv_item_height"
            android:layout_marginTop="@dimen/local_top_margin"/>

    </LinearLayout>
</ScrollView>
